# market-screener-app

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml
app/: __init__.py  config.py  log.py
app/itrader_live/: __init__.py  live_trading_system.py
app/models/: watchlist.py
app/routes/: api_routes.py  view_routes.py  websocket_routes.py
app/static/: button_handler.js  market_overview.js  style.css  websocket_handler.js
app/utils/: time.py
app/views/: index.html
app/views/cards/: market_overview.html  screeners.html  watchlist.html
app/views/modals/: add_symbol.html
app/views/templates/: body.html  footer.html  header.html
app/websocket/: binance_ws.py
